// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidationReport.svelte > should render validation report 1`] = `
<div>
  <status-report
    class="flex flex-col "
  >
    <message
      class="flex gap-2 pass"
    >
      <icon
        aria-label="badge-pass"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-pass"
        />
      </icon>
      <!---->
       
      <p>
        This check passed
      </p>
    </message>
    <message
      class="flex gap-2 fail"
    >
      <icon
        aria-label="badge-fail"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-fail"
        />
      </icon>
      <!---->
       
      <p>
        This check failed
      </p>
    </message>
    <message
      class="flex gap-2 unknown"
    >
      <icon
        aria-label="badge-unknown"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-unknown"
        />
      </icon>
      <!---->
       
      <p>
        This check is unknown
      </p>
    </message>
    <message
      class="flex gap-2 warn"
    >
      <icon
        aria-label="badge-warn"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="badge-warn"
        />
      </icon>
      <!---->
       
      <p>
        This check is warning
      </p>
    </message>
    
  </status-report>
  
</div>
`;

exports[`ValidationReport.svelte > should render validation report with custom icons 1`] = `
<div>
  <status-report
    class="flex flex-col "
  >
    <message
      class="flex gap-2 pass"
    >
      <icon
        aria-label="pass"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="pass"
        />
      </icon>
      <!---->
       
      <p>
        This check passed
      </p>
    </message>
    <message
      class="flex gap-2 fail"
    >
      <icon
        aria-label="fail"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fail"
        />
      </icon>
      <!---->
       
      <p>
        This check failed
      </p>
    </message>
    <message
      class="flex gap-2 unknown"
    >
      <icon
        aria-label="unknown"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="unknown"
        />
      </icon>
      <!---->
       
      <p>
        This check is unknown
      </p>
    </message>
    <message
      class="flex gap-2 warn"
    >
      <icon
        aria-label="warn"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="warn"
        />
      </icon>
      <!---->
       
      <p>
        This check is warning
      </p>
    </message>
    
  </status-report>
  
</div>
`;
